--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
       <body>
           <img id="logo" src="imagenes/Logo.svg">
           <textarea rows="10" cols="20" type="text" placeHolder = "ingrese el texto aqui" id="textoAEncriptar"></textarea>
-          <div id="warning"><p> &excl; solo letras minúsculas y sin acento</p></div>
+          <div id="warning"><p> &excl; solo letras minúsculas y sin acento.</p></div>
           <div class="botones">
             <button id="encriptar">Encriptar</button>
             <button id="desencriptar">Desencriptar</button>
