Se realizo el  boton copiar

--- a/index.html
+++ b/index.html
@@ -23,8 +23,10 @@
                 <p id="ingresa"> Ingresa el texto que desees encriptar o desencriptar.</p>
               </div>
           </div>
+          <div>
           <textarea id="resultado" rows="10" cols="20"> </textarea>
-            
+          <button id="copiar">Copiar</button>
+          </div>  
           <script src="script.js"></script>           
       </body>
   
