--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
       </head>
       
       <body>
+          <h1>Encriptador</h1>
           <img id="logo" src="imagenes/Logo.svg">
           <textarea rows="10" cols="20" type="text" placeHolder = "ingrese el texto aqui" id="textoAEncriptar"></textarea>
           <div id="warning"><p> &excl; solo letras minúsculas y sin acento.</p></div>
